modifs visuelles et template word

--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "aspose-cloud/aspose-words-cloud": "^22.9",
+        "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
-        "laravelcollective/html": "^6.3"
+        "laravelcollective/html": "^6.3",
+        "phpoffice/phpword": "^0.18.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
