--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "aos": "^2.3.4",
         "jquery": "^3.6.1",
         "jquery-nice-select": "^1.1.0",
+        "jquery-ui": "^1.13.2",
         "magnific-popup": "^1.1.0",
         "simple-parallax-js": "^5.6.2"
     }
